<resources>
    <string name="app_name">Vitaminute</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vitaminute</string>
    <string name="nav_header_subtitle">Everything about health and nutrition</string>
    <string name="nav_header_desc">Navigation header</string>


    <!--  navigation bar  -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_bmi">BMI Calculator</string>
    <string name="menu_our_team">Our Team</string>

    <!-- activities  -->
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="results">Results</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_number" />
    <string name="calcBtn">Calculate</string>
    <string name="name">Name</string>
    <string name="nameEdit" />
    <string name="surname">Surname</string>
    <string name="surnameEdit" />
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="emailEdit" />
    <string name="save">Save</string>
    <string name="header_text" />
    <string name="copyright">© Copyright 2020, Vitaminute</string>
    <string name="bmiHeader">BMI Calculator</string>
    <string name="res" />

</resources>
