<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_assessment_black_24dp"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_our_team"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_our_team" />

    </group>
</menu>
