<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vitaminute.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <activity
        android:id="@+id/nav_gallery"
        android:name="com.example.vitaminute.Gallery"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_gallery" />

    <activity
        android:id="@+id/nav_contact"
        android:name="com.example.vitaminute.Contact"
        android:label="@string/menu_contact"
        tools:layout="@layout/activity_contact" />

    <activity
        android:id="@+id/nav_bmi"
        android:name="com.example.vitaminute.Bmi"
        android:label="@string/menu_bmi"
        tools:layout="@layout/activity_bmi" />

    <activity
        android:id="@+id/nav_our_team"
        android:name="com.example.vitaminute.OurTeam"
        android:label="@string/menu_our_team"
        tools:layout="@layout/activity_our_team" />
</navigation>